# HDGeant4

./: .gitignore  CMakeLists.txt  GNUmakefile  GlueXBeamConversionProcess.cc  INSTALL  README.OSX  README.md
g4py/: hdgeant4.py
g4py/G4fixes/: __init__.py
g4py/HDGeant4/: __init__.py
src/: AdaptiveSampler.cc  CobremsGeneration.cc  G4TRandom.hh  G4fixes.cc  GlueXBeamConversionProcess.cc  GlueXBernardConversionProcess.cc  GlueXBremsstrahlungGenerator.cc  GlueXDetectorConstruction.cc  GlueXDetectorConstruction.hh  GlueXDetectorMessenger.cc  GlueXEventAction.cc  GlueXHitBCALpoint.cc  GlueXHitCCALpoint.cc  GlueXHitCDCpoint.cc  GlueXHitCEREpoint.cc  GlueXHitCTOFbar.hh  GlueXHitCTOFpoint.cc  GlueXHitDIRCflash.hh  GlueXHitECALpoint.cc  GlueXHitFCALinsertpoint.cc  GlueXHitFCALpoint.cc  GlueXHitFDCpoint.cc  GlueXHitFMWPCpoint.cc  GlueXHitFTOFbar.hh  GlueXHitFTOFpoint.cc  GlueXHitGCALpoint.cc  GlueXHitGEMTRDhit.cc  GlueXHitGEMTRDhit.hh  GlueXHitGEMTRDpoint.cc  GlueXHitGEMTRDpoint.hh  GlueXHitGEMTRDtrace.cc  GlueXHitGEMTRDtrace.hh  GlueXHitITOFhit.cc  GlueXHitITOFhit.hh  GlueXHitITOFpoint.cc  GlueXHitITOFpoint.hh  GlueXHitPSCpoint.cc  GlueXHitPSpoint.cc  GlueXHitSTCpoint.cc  GlueXHitTPOLpoint.cc  (+51 more)
src/G4.10.07.p04fixes/: BooleanProcessor.src  G4ChordFinderDelegate.icc  G4FieldManagerStore.cc  G4HelixMixedStepper.cc  G4MagHelicalStepper.cc  G4OpenGLViewer.cc  G4VDivisionParameterisation.cc  G4VDivisionParameterisation.hh
src/G4debug/: G4IntegrationDriver.icc  G4PathFinder.cc  G4PropagatorInField.cc
src/utils/: CMakeLists.txt  geneBH.cc  samplesep.cc
